--- a/webserver/package.json
+++ b/webserver/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "nuxt": "^3.7.4",
+    "prisma": "^5.4.2",
     "vite-plugin-vuetify": "^1.0.2",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5",
@@ -19,6 +20,7 @@
   },
   "dependencies": {
     "@mdi/font": "^7.3.67",
+    "@prisma/client": "5.4.2",
     "chart.js": "^4.4.0",
     "vue-chartjs": "^5.2.0"
   }
