--- a/.github/workflows/nuxtjs.yml
+++ b/.github/workflows/nuxtjs.yml
@@ -28,6 +28,9 @@ jobs:
   # Build job
   build:
     runs-on: ubuntu-latest
+    defaults:
+        run:
+          working-directory: ./docs # Here the path to the folder where package-lock.json is located.
     steps:
       - name: Checkout
         uses: actions/checkout@v3
