--- a/.github/workflows/nuxtjs.yml
+++ b/.github/workflows/nuxtjs.yml
@@ -34,12 +34,15 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - uses: pnpm/action-setup@v2
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
           node-version: "18"
-          cache: pnpm
+          cache: 'pnpm'
+          cache-dependency-path: '**/pnpm-lock.json'
+          working-directory: ./docs
       - name: Setup Pages
         uses: actions/configure-pages@v3
         with:
