--- a/webserver/package.json
+++ b/webserver/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@types/luxon": "^3.3.2",
     "nuxt": "^3.7.4",
     "prisma": "^5.4.2",
     "vite-plugin-vuetify": "^1.0.2",
@@ -22,6 +23,7 @@
     "@mdi/font": "^7.3.67",
     "@prisma/client": "5.4.2",
     "chart.js": "^4.4.0",
+    "luxon": "^3.4.3",
     "vue-chartjs": "^5.2.0"
   }
 }
