--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@nuxt/image": "^1.0.0",
     "@nuxtjs/tailwindcss": "^6.8.0",
     "nuxt": "^3.7.4",
     "vue": "^3.3.4",
